{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 52,
  "lineage": "65555782-6014-e847-05f8-05a1f231a8bb",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0521cae8dae7e630e",
            "arn": "arn:aws:ec2:eu-north-1:794038256039:elastic-ip/eipalloc-0521cae8dae7e630e",
            "association_id": "eipassoc-0ff2856cba5886595",
            "domain": "vpc",
            "id": "eipalloc-0521cae8dae7e630e",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-0ccb0110062f74991",
            "private_dns": "ip-10-0-1-154.eu-north-1.compute.internal",
            "private_ip": "10.0.1.154",
            "public_dns": "ec2-51-21-153-109.eu-north-1.compute.amazonaws.com",
            "public_ip": "51.21.153.109",
            "public_ipv4_pool": "amazon",
            "region": "eu-north-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:794038256039:internet-gateway/igw-024d0ae35899829bc",
            "id": "igw-024d0ae35899829bc",
            "owner_id": "794038256039",
            "region": "eu-north-1",
            "tags": {
              "Name": "lesson-7-vpc-igw"
            },
            "tags_all": {
              "Name": "lesson-7-vpc-igw"
            },
            "vpc_id": "vpc-0822c12411b85fa88"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0521cae8dae7e630e",
            "association_id": "eipassoc-0ff2856cba5886595",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-012e881e703137c38",
            "network_interface_id": "eni-0ccb0110062f74991",
            "private_ip": "10.0.1.154",
            "public_ip": "51.21.153.109",
            "region": "eu-north-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07482e0e976f4fd61",
            "tags": {
              "Name": "lesson-7-vpc-nat-gw"
            },
            "tags_all": {
              "Name": "lesson-7-vpc-nat-gw"
            },
            "vpc_id": "vpc-0822c12411b85fa88"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:794038256039:route-table/rtb-025e130dce27627e0",
            "id": "rtb-025e130dce27627e0",
            "owner_id": "794038256039",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-012e881e703137c38",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lesson-7-vpc-private-rt"
            },
            "tags_all": {
              "Name": "lesson-7-vpc-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0822c12411b85fa88"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "794038256039",
            "id": "rtb-025e130dce27627e0",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:794038256039:route-table/rtb-0de690f181fff5007",
            "id": "rtb-0de690f181fff5007",
            "owner_id": "794038256039",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-024d0ae35899829bc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lesson-7-vpc-public-rt"
            },
            "tags_all": {
              "Name": "lesson-7-vpc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0822c12411b85fa88"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "794038256039",
            "id": "rtb-0de690f181fff5007",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec842e6712cb4ba8",
            "region": "eu-north-1",
            "route_table_id": "rtb-025e130dce27627e0",
            "subnet_id": "subnet-0133fcdd659bcee08"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03743834b14a1e19a",
            "region": "eu-north-1",
            "route_table_id": "rtb-025e130dce27627e0",
            "subnet_id": "subnet-08dcd3379122bf5a5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd4a0e0224dd934b",
            "region": "eu-north-1",
            "route_table_id": "rtb-025e130dce27627e0",
            "subnet_id": "subnet-0986793db2b689ad9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0690e2ce8230aace2",
            "region": "eu-north-1",
            "route_table_id": "rtb-0de690f181fff5007",
            "subnet_id": "subnet-07482e0e976f4fd61"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00cf01b0151d64066",
            "region": "eu-north-1",
            "route_table_id": "rtb-0de690f181fff5007",
            "subnet_id": "subnet-06bc7f752314bd301"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041646532ca919144",
            "region": "eu-north-1",
            "route_table_id": "rtb-0de690f181fff5007",
            "subnet_id": "subnet-0331bc7258cfa1039"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:794038256039:subnet/subnet-0133fcdd659bcee08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0133fcdd659bcee08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "794038256039",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "lesson-7-vpc-private-subnet-1"
            },
            "tags_all": {
              "Name": "lesson-7-vpc-private-subnet-1"
            },
            "vpc_id": "vpc-0822c12411b85fa88"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "794038256039",
            "id": "subnet-0133fcdd659bcee08",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:794038256039:subnet/subnet-08dcd3379122bf5a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08dcd3379122bf5a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "794038256039",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "lesson-7-vpc-private-subnet-2"
            },
            "tags_all": {
              "Name": "lesson-7-vpc-private-subnet-2"
            },
            "vpc_id": "vpc-0822c12411b85fa88"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "794038256039",
            "id": "subnet-08dcd3379122bf5a5",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:794038256039:subnet/subnet-0986793db2b689ad9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0986793db2b689ad9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "794038256039",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "lesson-7-vpc-private-subnet-3"
            },
            "tags_all": {
              "Name": "lesson-7-vpc-private-subnet-3"
            },
            "vpc_id": "vpc-0822c12411b85fa88"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "794038256039",
            "id": "subnet-0986793db2b689ad9",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:794038256039:subnet/subnet-07482e0e976f4fd61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07482e0e976f4fd61",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "794038256039",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "lesson-7-vpc-public-subnet-1"
            },
            "tags_all": {
              "Name": "lesson-7-vpc-public-subnet-1"
            },
            "vpc_id": "vpc-0822c12411b85fa88"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "794038256039",
            "id": "subnet-07482e0e976f4fd61",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:794038256039:subnet/subnet-06bc7f752314bd301",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06bc7f752314bd301",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "794038256039",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "lesson-7-vpc-public-subnet-2"
            },
            "tags_all": {
              "Name": "lesson-7-vpc-public-subnet-2"
            },
            "vpc_id": "vpc-0822c12411b85fa88"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "794038256039",
            "id": "subnet-06bc7f752314bd301",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:794038256039:subnet/subnet-0331bc7258cfa1039",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0331bc7258cfa1039",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "794038256039",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "lesson-7-vpc-public-subnet-3"
            },
            "tags_all": {
              "Name": "lesson-7-vpc-public-subnet-3"
            },
            "vpc_id": "vpc-0822c12411b85fa88"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "794038256039",
            "id": "subnet-0331bc7258cfa1039",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:794038256039:vpc/vpc-0822c12411b85fa88",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-048be66188d9c782b",
            "default_route_table_id": "rtb-0acdf824e4a0f53b5",
            "default_security_group_id": "sg-063e3b4cc3baef79d",
            "dhcp_options_id": "dopt-09b756183fb9aad39",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0822c12411b85fa88",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0acdf824e4a0f53b5",
            "owner_id": "794038256039",
            "region": "eu-north-1",
            "tags": {
              "Name": "lesson-7-vpc"
            },
            "tags_all": {
              "Name": "lesson-7-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "794038256039",
            "id": "vpc-0822c12411b85fa88",
            "region": "eu-north-1"
          }
        }
      ]
    }
  ]
}